tests/baselines/reference/classExtendingPrimitive2.errors.txt
==== tests/cases/conformance/classes/classDeclarations/classHeritageSpecification/classExtendingPrimitive2.ts (3 errors) ====
    // classes cannot extend primitives
    
    class C4a extends void {}
                      ~~~~
!!! error TS1003: Identifier expected.
    class C5a extends null { }
                      ~~~~
!!! error TS1003: Identifier expected.
                           ~
!!! error TS1005: ';' expected.